kubernetes/apps/observability/siren/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: siren-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "Siren"
    homepage.shamubernetes.com/description: "Review Alertmanager alerts"
    homepage.shamubernetes.com/group: "Observability"
    homepage.shamubernetes.com/order: "30"
    homepage.shamubernetes.com/favorite: "false"
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "siren.${HOME_DOMAIN}"
  rules:
  - backendRefs:
    - name: siren
      port: 3000
